[gd_scene load_steps=6 format=3 uid="uid://b0gmn30xjyv0h"]

[ext_resource type="LabelSettings" uid="uid://suu2wjaohbam" path="res://Setings/new_label_settings.tres" id="1_vacky"]
[ext_resource type="Script" uid="uid://bly5avw3xqvyf" path="res://Scripts/GameOverScreen.gd" id="2_7j7en"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3n1re"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_kkeso"]
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_b0ovv"]
font_size = 35

[node name="Game_Over" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 1152.0
offset_bottom = 650.0
script = ExtResource("2_7j7en")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 1.0
offset_top = 2.0
offset_right = 1155.0
offset_bottom = 646.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3n1re")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.491
anchor_right = 0.5
anchor_bottom = 0.491
offset_left = -361.0
offset_top = -210.243
offset_right = 365.0
offset_bottom = 223.75699
grow_horizontal = 2
grow_vertical = 0

[node name="Winner" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Ganador:"
label_settings = SubResource("LabelSettings_kkeso")

[node name="TotalTimeGame" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Tiempo total de Juego:"
label_settings = SubResource("LabelSettings_b0ovv")

[node name="Games_Container" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Games_Container"]
layout_mode = 2
size_flags_vertical = 3

[node name="Player1" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "P1"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game1_P1" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game2_P1" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game3_P1" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game4_P1" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game5_P1" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="VBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/Games_Container"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player2" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "P2"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game1_P2" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game2_P2" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game3_P2" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game4_P2" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Game5_P2" type="Label" parent="Panel/VBoxContainer/Games_Container/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = ExtResource("1_vacky")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
alignment = 1

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Back to Menu"

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
text = "Reiniciar"
